  (Issue #1050, Thanks Guido Imperiale)
- NaN is now treated the same as zero in addition, subtraction, equality, and
  disequality (Issue #1051, Thanks Guido Imperiale)
- Fixed issue where quantities with a very large magnitude would throw an IndexError 
  when using to_compact()
- Fixed crash when a Unit with prefix is declared for the first time while a Context
  containing unit redefinitions is active (Issue #1062, Thanks Guido Imperiale)
- New implementation of 'Lx' String Format Type Option
  The old implementation treated 'Lx' as 'S' as produced by 'uncertainties'
  package, but that is not fully compatible with SIunitx. The new code protects
  SIunitx by fixing what unceratinties produces.
  (Issue #814)
- Added link to budding `pint-xarray` interface library to the docs, next to
  the link to pint-pandas. (Thanks Tom Nicholas.)
- Removed outdated `_dir` attribute of `UnitsRegistry`, and added `__iter__`
  method so that now `list(ureg)` returns a list of all units in registry.
  (Issue #1072, Thanks Tom Nicholas)
- Replace pkg_resources.version to importlib.metadata.version. (Issue #1083)
- Fix typo in docs for wraps example with optional arguments. (Issue #1088)
- Add momentum as a dimension

0.11 (2020-02-19)
-----------------

- Added pint-convert script.
- Remove `default_en_0.6.txt`.
- Make `__str__` and `__format__` locale configurable.
  (Issue #984)
- Quantities wrapping NumPy arrays will no longer warning for the changed
  array function behavior introduced in 0.10.
  (Issue #1029, Thanks Jon Thielen)
- **BREAKING CHANGE**:
  The array protocol fallback deprecated in version 0.10 has been removed.
  (Issue #1029, Thanks Jon Thielen)
- Now we use `pyproject.toml` for providing `setuptools_scm` settings
- Remove `default_en_0.6.txt`
- Reorganize long_description.
- Moved Pi to definitions files.
- Use ints (not floats) a defaults at many points in the codebase as in Python 3
  the true division is the default one.
- **BREAKING CHANGE**: